[gd_scene load_steps=78 format=2]

[ext_resource path="res://ememy_character.gd" type="Script" id=1]
[ext_resource path="res://Download25752.png" type="Texture" id=2]

[sub_resource type="CapsuleShape2D" id=189]
height = 15.0

[sub_resource type="CircleShape2D" id=188]
radius = 24.0

[sub_resource type="AtlasTexture" id=108]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 1728, 192, 192 )

[sub_resource type="AtlasTexture" id=109]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 192, 1728, 192, 192 )

[sub_resource type="AtlasTexture" id=110]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 384, 1728, 192, 192 )

[sub_resource type="AtlasTexture" id=111]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 576, 1728, 192, 192 )

[sub_resource type="AtlasTexture" id=112]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 768, 1728, 192, 192 )

[sub_resource type="AtlasTexture" id=113]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 960, 1728, 192, 192 )

[sub_resource type="AtlasTexture" id=114]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 1536, 192, 192 )

[sub_resource type="AtlasTexture" id=115]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 192, 1536, 192, 192 )

[sub_resource type="AtlasTexture" id=116]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 384, 1536, 192, 192 )

[sub_resource type="AtlasTexture" id=117]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 576, 1536, 192, 192 )

[sub_resource type="AtlasTexture" id=118]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 768, 1536, 192, 192 )

[sub_resource type="AtlasTexture" id=119]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 960, 1536, 192, 192 )

[sub_resource type="AtlasTexture" id=120]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 1920, 192, 192 )

[sub_resource type="AtlasTexture" id=121]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 192, 1920, 192, 192 )

[sub_resource type="AtlasTexture" id=122]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 384, 1920, 192, 192 )

[sub_resource type="AtlasTexture" id=123]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 576, 1920, 192, 192 )

[sub_resource type="AtlasTexture" id=124]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 768, 1920, 192, 192 )

[sub_resource type="AtlasTexture" id=125]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 960, 1920, 192, 192 )

[sub_resource type="AtlasTexture" id=126]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 1344, 192, 192 )

[sub_resource type="AtlasTexture" id=127]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 192, 1344, 192, 192 )

[sub_resource type="AtlasTexture" id=128]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 384, 1344, 192, 192 )

[sub_resource type="AtlasTexture" id=129]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 576, 1344, 192, 192 )

[sub_resource type="AtlasTexture" id=130]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 768, 1344, 192, 192 )

[sub_resource type="AtlasTexture" id=131]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 960, 1344, 192, 192 )

[sub_resource type="AtlasTexture" id=175]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 1280, 64, 64 )

[sub_resource type="AtlasTexture" id=176]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 64, 1280, 64, 64 )

[sub_resource type="AtlasTexture" id=177]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 128, 1280, 64, 64 )

[sub_resource type="AtlasTexture" id=178]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 192, 1280, 64, 64 )

[sub_resource type="AtlasTexture" id=179]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 256, 1280, 64, 64 )

[sub_resource type="AtlasTexture" id=180]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 320, 1280, 64, 64 )

[sub_resource type="AtlasTexture" id=181]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 384, 1280, 64, 64 )

[sub_resource type="AtlasTexture" id=182]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 448, 1280, 64, 64 )

[sub_resource type="AtlasTexture" id=183]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 512, 1280, 64, 64 )

[sub_resource type="AtlasTexture" id=184]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 576, 1280, 64, 64 )

[sub_resource type="AtlasTexture" id=132]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 640, 64, 64 )

[sub_resource type="AtlasTexture" id=133]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 64, 640, 64, 64 )

[sub_resource type="AtlasTexture" id=134]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 128, 640, 64, 64 )

[sub_resource type="AtlasTexture" id=135]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 192, 640, 64, 64 )

[sub_resource type="AtlasTexture" id=136]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 256, 640, 64, 64 )

[sub_resource type="AtlasTexture" id=137]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 320, 640, 64, 64 )

[sub_resource type="AtlasTexture" id=138]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 384, 640, 64, 64 )

[sub_resource type="AtlasTexture" id=139]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 448, 640, 64, 64 )

[sub_resource type="AtlasTexture" id=140]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 512, 640, 64, 64 )

[sub_resource type="AtlasTexture" id=141]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 576, 64, 64 )

[sub_resource type="AtlasTexture" id=142]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 64, 576, 64, 64 )

[sub_resource type="AtlasTexture" id=143]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 128, 576, 64, 64 )

[sub_resource type="AtlasTexture" id=144]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 192, 576, 64, 64 )

[sub_resource type="AtlasTexture" id=145]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 256, 576, 64, 64 )

[sub_resource type="AtlasTexture" id=146]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 320, 576, 64, 64 )

[sub_resource type="AtlasTexture" id=147]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 384, 576, 64, 64 )

[sub_resource type="AtlasTexture" id=148]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 448, 576, 64, 64 )

[sub_resource type="AtlasTexture" id=149]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 512, 576, 64, 64 )

[sub_resource type="AtlasTexture" id=150]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 704, 64, 64 )

[sub_resource type="AtlasTexture" id=151]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 64, 704, 64, 64 )

[sub_resource type="AtlasTexture" id=152]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 128, 704, 64, 64 )

[sub_resource type="AtlasTexture" id=153]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 192, 704, 64, 64 )

[sub_resource type="AtlasTexture" id=154]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 256, 704, 64, 64 )

[sub_resource type="AtlasTexture" id=155]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 320, 704, 64, 64 )

[sub_resource type="AtlasTexture" id=156]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 384, 704, 64, 64 )

[sub_resource type="AtlasTexture" id=157]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 448, 704, 64, 64 )

[sub_resource type="AtlasTexture" id=158]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 512, 704, 64, 64 )

[sub_resource type="AtlasTexture" id=159]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 512, 64, 64 )

[sub_resource type="AtlasTexture" id=160]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 64, 512, 64, 64 )

[sub_resource type="AtlasTexture" id=161]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 128, 512, 64, 64 )

[sub_resource type="AtlasTexture" id=162]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 192, 512, 64, 64 )

[sub_resource type="AtlasTexture" id=163]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 256, 512, 64, 64 )

[sub_resource type="AtlasTexture" id=164]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 320, 512, 64, 64 )

[sub_resource type="AtlasTexture" id=165]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 384, 512, 64, 64 )

[sub_resource type="AtlasTexture" id=166]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 448, 512, 64, 64 )

[sub_resource type="AtlasTexture" id=167]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 512, 512, 64, 64 )

[sub_resource type="SpriteFrames" id=168]
animations = [ {
"frames": [ SubResource( 108 ), SubResource( 109 ), SubResource( 110 ), SubResource( 111 ), SubResource( 112 ), SubResource( 113 ) ],
"loop": true,
"name": "attack_down",
"speed": 15.0
}, {
"frames": [ SubResource( 114 ), SubResource( 115 ), SubResource( 116 ), SubResource( 117 ), SubResource( 118 ), SubResource( 119 ) ],
"loop": true,
"name": "attack_left",
"speed": 15.0
}, {
"frames": [ SubResource( 120 ), SubResource( 121 ), SubResource( 122 ), SubResource( 123 ), SubResource( 124 ), SubResource( 125 ) ],
"loop": true,
"name": "attack_right",
"speed": 12.0
}, {
"frames": [ SubResource( 126 ), SubResource( 127 ), SubResource( 128 ), SubResource( 129 ), SubResource( 130 ), SubResource( 131 ) ],
"loop": true,
"name": "attack_up",
"speed": 15.0
}, {
"frames": [ SubResource( 175 ), SubResource( 176 ), SubResource( 177 ), SubResource( 178 ), SubResource( 179 ), SubResource( 180 ), SubResource( 181 ), SubResource( 182 ), SubResource( 183 ), SubResource( 184 ) ],
"loop": false,
"name": "dead",
"speed": 15.0
}, {
"frames": [ SubResource( 132 ), SubResource( 133 ), SubResource( 134 ), SubResource( 135 ), SubResource( 136 ), SubResource( 137 ), SubResource( 138 ), SubResource( 139 ), SubResource( 140 ) ],
"loop": true,
"name": "walk_down",
"speed": 15.0
}, {
"frames": [ SubResource( 141 ), SubResource( 142 ), SubResource( 143 ), SubResource( 144 ), SubResource( 145 ), SubResource( 146 ), SubResource( 147 ), SubResource( 148 ), SubResource( 149 ) ],
"loop": true,
"name": "walk_left",
"speed": 15.0
}, {
"frames": [ SubResource( 150 ), SubResource( 151 ), SubResource( 152 ), SubResource( 153 ), SubResource( 154 ), SubResource( 155 ), SubResource( 156 ), SubResource( 157 ), SubResource( 158 ) ],
"loop": true,
"name": "walk_right",
"speed": 15.0
}, {
"frames": [ SubResource( 159 ), SubResource( 160 ), SubResource( 161 ), SubResource( 162 ), SubResource( 163 ), SubResource( 164 ), SubResource( 165 ), SubResource( 166 ), SubResource( 167 ) ],
"loop": true,
"name": "walk_up",
"speed": 15.0
} ]

[sub_resource type="RectangleShape2D" id=186]
extents = Vector2( 12, 24 )

[sub_resource type="RectangleShape2D" id=187]
extents = Vector2( 34, 12 )

[node name="enemy_character" type="KinematicBody2D" groups=["enemy_character"]]
z_index = 1
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
rotation = 1.5708
shape = SubResource( 189 )

[node name="range" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="range"]
shape = SubResource( 188 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 168 )
animation = "walk_right"
offset = Vector2( 0, -26 )

[node name="Line2D" type="Line2D" parent="."]
visible = false
width = 2.0

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="hurtbox_enemy" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtbox_enemy"]
position = Vector2( 0, -20 )
shape = SubResource( 186 )

[node name="hitbox_enemy" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox_enemy"]
shape = SubResource( 187 )

[connection signal="body_entered" from="range" to="." method="_on_range_body_entered"]
[connection signal="body_exited" from="range" to="." method="_on_range_body_exited"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="navigation_finished" from="NavigationAgent2D" to="." method="_on_NavigationAgent2D_navigation_finished"]
[connection signal="path_changed" from="NavigationAgent2D" to="." method="_on_NavigationAgent2D_path_changed"]
[connection signal="target_reached" from="NavigationAgent2D" to="." method="_on_NavigationAgent2D_target_reached"]
[connection signal="velocity_computed" from="NavigationAgent2D" to="." method="_on_NavigationAgent2D_velocity_computed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="hitbox_enemy" to="." method="_on_hitbox_enemy_area_entered"]
